--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,14 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+__pycache__/
+*.pyc
+*.egg-info/
+dist/
+build/
+.env
+.venv
+.idea/
+.vscode/
+.DS_Store
